# py-mms

./: .gitignore  .gitmodules  README.md  codecov.yml  makeLib.sh  pytest.ini  setup.cfg  setup.py
.github/workflows/: py36.yml  pytest.yml  syntax.yml
pymms/: __init__.py  config.py  exceptions.py  gomms.py  productevent.py  pymms.py
pymms/lib/: README.md  makeLib.sh
tests/: conftest.py  test_core.py  test_postevent.py
