[metadata]
name = pymms
version = attr: pymms.__version__
author = MET Norway
description = Python client for go-mms
url = https://github.com/metno/py-mms
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Operating System :: OS Independent
python_requires = >=3.6
project_urls =
    Source Code = https://github.com/metno/py-mms

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E241,E251,E261,E266,E302,E305
max-line-length = 99
